<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/sender"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/groupListFragment"
        android:icon="@drawable/ic_users_line_solid"
        android:title="@string/title_group" />

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_book_solid"
        android:title="@string/title_notifications" />

</menu>