<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    tools:context=".activities.MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lines"
        android:scaleX="2"
        android:scaleY="1.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/si_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleX="1.2"
        android:contentDescription="@string/bg_si"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/si_rectangle" />

    <ImageView
        android:id="@+id/si_welcome"
        android:layout_width="195dp"
        android:layout_height="35dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/welcome_back" />

    <ImageView
        android:id="@+id/si_to_continue"
        android:layout_width="258dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/si_welcome"
        app:layout_constraintStart_toStartOf="@+id/si_welcome"
        app:layout_constraintTop_toBottomOf="@+id/si_welcome"
        app:srcCompat="@drawable/sign_continue" />

    <TextView
        android:id="@+id/si_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scaleX=".8"
        android:scaleY=".8"
        android:text="Don't have an account? -"
        app:layout_constraintEnd_toEndOf="@+id/si_button_acount"
        app:layout_constraintStart_toStartOf="@+id/si_button_acount"
        app:layout_constraintTop_toBottomOf="@+id/si_button_acount" />

    <TextView
        android:id="@+id/si_acount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scaleX=".7"
        android:scaleY=".7"
        android:text="Forgot Password?"
        app:layout_constraintEnd_toEndOf="@+id/si_to_continue"
        app:layout_constraintStart_toStartOf="@+id/si_to_continue"
        app:layout_constraintTop_toBottomOf="@+id/si_password" />

    <TextView
        android:id="@+id/si_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Sign Up"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/si_acount"
        app:layout_constraintStart_toStartOf="@+id/si_acount"
        app:layout_constraintTop_toBottomOf="@+id/si_acount" />

    <ImageView
        android:id="@+id/su_pass"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/si_password"
        app:layout_constraintEnd_toEndOf="@+id/si_password"
        app:layout_constraintStart_toStartOf="@+id/si_password"
        app:layout_constraintTop_toTopOf="@+id/si_password"
        app:srcCompat="@drawable/si_c_rectangle" />

    <ImageView
        android:id="@+id/su_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:srcCompat="@drawable/si_e_rectangle" />

    <Button
        android:id="@+id/si_button_acount"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:foreground="@drawable/si_intoacount"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/si_to_continue"
        app:layout_constraintStart_toStartOf="@+id/si_to_continue"
        app:layout_constraintTop_toBottomOf="@+id/si_acount2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#7C7C7C"
        android:textColorHint="@color/purple_200"
        android:textColorLink="#777777"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/si_to_continue"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/si_to_continue"
        app:layout_constraintTop_toBottomOf="@+id/si_to_continue"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/si_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/purple_200"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/si_to_continue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/si_to_continue"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="4dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/si_rectangle_2" />


</androidx.constraintlayout.widget.ConstraintLayout>