<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    tools:context=".activities.MainSignupActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lines"
        android:scaleX="2"
        android:scaleY="1.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/si_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bg_si"
        android:scaleX="1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/si_rectangle" />

    <ImageView
        android:id="@+id/si_welcome"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/welcome" />

    <ImageView
        android:id="@+id/si_to_continue"
        android:layout_width="261dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/si_welcome"
        app:srcCompat="@drawable/sup_continue" />

    <TextView
        android:id="@+id/si_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:scaleX=".8"
        android:scaleY=".8"
        android:text="Already have an account? -"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/si_button_acount" />

    <TextView
        android:id="@+id/si_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="Sign In"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/si_button_acount" />

    <ImageView
        android:id="@+id/su_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/su_email"
        app:layout_constraintStart_toStartOf="@+id/su_email"
        app:layout_constraintTop_toBottomOf="@+id/su_email"
        app:srcCompat="@drawable/si_c_rectangle" />

    <ImageView
        android:id="@+id/su_con"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/si_password"
        app:layout_constraintStart_toStartOf="@+id/si_password"
        app:layout_constraintTop_toBottomOf="@+id/su_pass"
        app:srcCompat="@drawable/si_c_rectangle" />

    <ImageView
        android:id="@+id/su_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/si_to_continue"
        app:srcCompat="@drawable/si_e_rectangle" />

    <Button
        android:id="@+id/si_button_acount"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:foreground="@drawable/si_intoacount"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/si_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/purple_200"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/su_pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/su_pass"
        app:layout_constraintTop_toBottomOf="@+id/su_pass"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#7C7C7C"
        android:textColorHint="@color/purple_200"
        android:textColorLink="#777777"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/su_pass"
        app:layout_constraintEnd_toEndOf="@+id/su_pass"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="@+id/su_pass"
        app:layout_constraintTop_toTopOf="@+id/su_pass"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="4dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/si_rectangle_2" />

    <EditText
        android:id="@+id/su_full_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Name"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/su_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/si_to_continue" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/su_con"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/si_password"
        app:layout_constraintTop_toBottomOf="@+id/si_password" />


</androidx.constraintlayout.widget.ConstraintLayout>